[package]
name = "NULL"
version = "1.2.0"
authors = ["serprex"]
description = "Interpreter for the NULL language"
repository = "https://github.com/serprex/NULL"
license = "MIT"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", default-features = false }
num-integer = "0.1"
num-traits = "0.2"
primal-sieve = "0.3"

[profile.release]
panic = "abort"
lto = "thin"
